la que casi lio

--- a/html/style.css
+++ b/html/style.css
@@ -1,10 +1,10 @@
 
-h1 {color: black;
+p {color: black;
 font-family: serif;
 font-size: 120%;
 font-style: oblique;}
 
-p {color: orange;
+h1 {color: orange;
  font-family: sans-serif;
   font-size: 350%;
   font-style: italic;
